# whatsapp-workflow

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  base_deployment_mr.yaml  base_deployment_prod.yaml  download-image.sh  main.py  update.sh
.github/workflows/: docker-image.yml  mr-create.yaml  mr-delete.yaml  prod-create.yaml
src/: constants.rs  main.rs  meta_requests.rs  redis.rs  request_handler.rs  s3_tools.rs  step_functions.rs  structs.rs  tools.rs
