[package]
name = "vin-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0"
ureq = {version = "2.5.0", features =["json"]}
redis = {version="0.22.1", features = ["streams"]}
uuid = {version="1.2.2", features=["fast-rng", "v4"]}


[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

