[package]
name = "vin-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0"
ureq = {version = "2.5.0", features =["json"]}
redis = {version="0.22.1", features = ["streams", "json"]}
uuid = {version="1.2.2", features=["fast-rng", "v4"]}
time = "0.3.17"
image = "0.24.5"
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
log = "0.4.0"
env_logger = "0.10.0"
enum-iterator = "1.2.0"
regex = "1.7.0"
fizzy_commons = {git = "ssh://git@github.com/PrimoAuditore/fizzy-commons.git",  tag="v2.0.1"}


